--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,15 @@
             <artifactId>telegrambots</artifactId>
             <version>5.0.1</version>
         </dependency>
-        
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>        
         
     </dependencies>
     <build>
