Changes to http client dependency

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,11 @@
             <artifactId>telegrambots</artifactId>
             <version>5.0.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.4</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
