--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
     
     <dependencies>
         <dependency>
+	    <groupId>org.telegram</groupId>
+	    <artifactId>telegrambots-abilities</artifactId>
+	    <version>5.0.1.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots</artifactId>
             <version>5.0.1</version>
